Fixed letterspacing

--- a/styles/_typography.scss
+++ b/styles/_typography.scss
@@ -15,7 +15,7 @@ h1{
 	text-shadow: 0px 0px 10px #292121,
 							0px 0px 15px lightgrey;	
 	margin-top: 11vh;
-	line-height: 1.6;ß
+	line-height: 1.6;
 	span{
 		letter-spacing: -0.2rem;
 	}
