--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* =========================================
 WEATHER ME THIS STYLES
 ============================================ */
@@ -185,7 +184,7 @@ h1 {
   margin-top: 11vh;
   line-height: 1.6;
 }
-h1 ß span {
+h1 span {
   letter-spacing: -0.2rem;
 }
 
